# path-tracing-svgf

./: .gitignore  CMakeLists.txt  GPU_raytracing.cpp  GPU_raytracing.sln  GPU_raytracing.vcxproj  GPU_raytracing.vcxproj.filters  README.md  imgui.ini  main.cpp  main.h  path_tracing_denoise.filters  path_tracing_denoise.sln  path_tracing_denoise.vcxproj
Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  GPU_raytracing.exe.recipe  GPU_raytracing.ilk  GPU_raytracing.vcxproj.FileListAbsolute.txt  consoleapplication1.new.obj.enc  vc142.idb
Debug/ConsoleA.d6ec06ff.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  ConsoleApplication1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/GPU_raytracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GPU_raytracing.lastbuildstate  GPU_raytracing.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
Release/: ConsoleApplication1.exe.recipe  ConsoleApplication1.iobj  ConsoleApplication1.ipdb  ConsoleApplication1.vcxproj.FileListAbsolute.txt
Utils/: BVH.h  Material.h  PointLight.h  Triangle.h  camera.h  gui_config.h  hdr_compute.h  help_func.h  obj_loader.h  render_pass.h  shader.h
lib/: hdrloader.cpp  root_directory.h
shaders/: TAA.frag  bilt.frag  fshader.frag  normalfshader.frag  normalvshader.vsh  output_pass.frag  pass3.frag  passlastframe.frag  path_tracing.frag  rasterize_frag.frag  rasterize_vert.vert  save_frame_data.frag  save_frame_date.frag  svgf_Atrous.frag  svgf_modulate.frag  svgf_reproject.frag  svgf_variance.frag  taa.frag  vert.vert  vshader.vsh
(+71 files in other folders)
